SAM-2577: add sort for award notice table (related opportunities)

--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -425,6 +425,8 @@
               {{relatedOpportunitiesMetadata.recipientCount}}
             </p>
           </div>
+
+          <samSelect class="sort-select" [(model)]="awardSort" [options]="awardSortOptions" [name]='awardSort' (modelChange)="reloadRelatedOpportunities()"></samSelect>
         </div>
 
           <div class="card-simple" *ngFor="let element of relatedOpportunities">
