--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -238,7 +238,7 @@
 
           <ng-container *ngIf="attachment">
           <!-- Header -->
-            <div class="card download-container" *ngFor="let package of attachment.packages">
+            <div class="card download-container" *ngFor="let package of attachment.packages" [@intro]="fade">
 
               <!-- It's public -->
               <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" (click)="toggleAccordion(package)">
@@ -304,9 +304,13 @@
             </div>
           </ng-container>
 
-          <ng-container *ngIf="!attachment">
-            <img src="src/assets/img/loading.svg">
-          </ng-container>
+          <div class="card" *ngIf="!attachment" [@intro]="fade">
+            <div class="card-secure-content usa-text-center">
+              <i class="fa fa-spinner fa-spin"></i>
+              <strong>Loading &hellip;</strong>
+            </div>
+          </div>
+
         </section>
 
         <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
