--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -18,9 +18,11 @@
 @import 'components/accordion';
 @import 'components/authentication';
 @import 'components/footer';
+@import 'components/button';
 @import 'components/pagination';
 @import 'components/header';
 @import 'components/agency-picker';
+@import 'components/input';
 @import 'components/multiselect';
 @import 'components/alert-header';
 @import 'components/banner';
