--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -304,7 +304,7 @@
             </div>
           </ng-container>
 
-          <div class="card" *ngIf="!attachment" [@intro]="fade">
+          <div class="card" *ngIf="!attachment && !attachmentError" [@intro]="fade">
             <div class="card-secure-content usa-text-center">
               <i class="fa fa-spinner fa-spin"></i>
               <strong>Loading &hellip;</strong>
