--- a/src/app/alerts/alert-edit/alert-edit.template.html
+++ b/src/app/alerts/alert-edit/alert-edit.template.html
@@ -25,8 +25,8 @@
   </div>
   <div class="alert-edit-actions clearfix">
     <div class="pull-right">
-      <button (click)="onAcceptClick($event)" [ngClass]="acceptButtonStyle()">Confirm</button>
-      <button class="usa-button-outline" (click)="onCancelClick($event)">Cancel</button>
+      <button class="alert-confirm-button" type="button" (click)="onAcceptClick($event)" [ngClass]="acceptButtonStyle()">Confirm</button>
+      <button type="button" class="usa-button-outline" (click)="onCancelClick($event)">Cancel</button>
     </div>
   </div>
   <div><pre><code>valid: {{form.valid | json}}</code></pre></div>
