--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -7,12 +7,14 @@
   </p>
   <h3 id="featuredReference" class="p_L-3x">Featured References</h3>
   <h4 class="p_L-8x">Federal Assistance</h4>
-  <imageLibrary [name]="'federal'" [data]="data.Federal"></imageLibrary>
-
-
+  <div class="usa-grid-full m_L-3x">
+    <imageLibrary [name]="'federal'" [data]="data.Federal"></imageLibrary>
+  </div>
 
   <h4 class="p_L-8x">Contracts</h4>
-  <imageLibrary [name]="'contract'" [data]="data.Contract"></imageLibrary>
+  <div class="usa-grid-full m_L-3x">
+    <imageLibrary [name]="'contract'" [data]="data.Contract"></imageLibrary>
+  </div>
 
   <h3 id="additionalReference" class="p_L-3x">Additional References</h3>
   <div class="usa-grid-full">
@@ -43,7 +45,7 @@
           <li class="m_B"><a class="usa-external_link" href="https://www.w3.org/WAI/wcag-curric/oversam.htm/">Web Accessibility Curriculum</a></li>
         </ul>
       </div>
-      <div class="usa-width-one-third" *ngIf="linkToggle()">
+      <div class="usa-width-one-third">
         <h4>Additional Resources</h4>
         <h5>Legal Resources</h5>
         <ul class="usa-unstyled-list">
