Package details theming

--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -203,7 +203,38 @@
     text-decoration: underline;
   }
 
-  /* File Size */
+  /* Download info */
   /*============================*/
+  .download-info-icon,
+  .download-info-link,
+  .download-info-type{
+    display: inline-block;
+  }
+
+  .download-info-icon{
+    width: 28px;
+    vertical-align: top;
+    padding-top: 8px;
+    padding-left: 15px;
+  }
+  .download-info-link{
+    width: 75%;
+    a{
+      padding-left: 0;
+    }
+    sup{
+      font-weight: 700;
+    }
+  }
+  .download-info-type{
+    width: 18%;
+    text-align: right;
+    vertical-align: top;
+    padding-top: 8px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #a2a2a2;
+  }
+
 
 }
