--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -322,22 +322,31 @@
                 <ng-container *ngFor="let resource of attachment.resources">
                   <!-- Resource -->
                   <ng-container *ngIf="element.resourceId === resource.resourceId">
-                    <div style="clear: both;">
-                      <span style="float: left; width: 80%" class="p_T-3x p_B-3x">
-                        <span style="margin: 0;" class="m_L-3x">
-                          <i class="{{resource.typeInfo.iconClass}}"></i>
-                        </span>
-                        <a *ngIf="resource.type === 'link'" style="display: inline !important; padding: 0;" class="m_L-3x" href="{{resource.uri}}">
+                    <div class="download-info">
+
+                      <span class="download-info-icon">
+                        <i class="{{resource.typeInfo.iconClass}}"></i>
+                      </span>
+
+                      <span class="download-info-link">
+                        
+                        <a *ngIf="resource.type === 'link'" href="{{resource.uri}}">
                           {{resource.description}}
+                          <sup *ngIf="resource.size && resource.size != 0">
+                            {{resource.size | filesize}}
+                          </sup>
                         </a>
-                        <a *ngIf="resource.type === 'file'" style="display: inline !important; padding: 0;" class="m_L-3x" href="{{getDownloadFileURL(resource.resourceId)}}">
+                        <a *ngIf="resource.type === 'file'" href="{{getDownloadFileURL(resource.resourceId)}}">
                           {{resource.description}}
+                          <sup *ngIf="resource.size && resource.size != 0">
+                            {{resource.size | filesize}}
+                          </sup>
                         </a>
-                        <ng-container *ngIf="resource.size && resource.size != 0">
-                          <sup>{{resource.size | filesize}}</sup>
-                        </ng-container>
-                      </span><span style="float: right; width: 20%; text-align: right">
-                        <p class="m_R-3x"><em>{{resource.typeInfo.name}}</em></p>
+                        
+                      </span>
+                      
+                      <span class="download-info-type">
+                        {{resource.typeInfo.name}}
                       </span>
                     </div>
                   </ng-container>
