--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -23,12 +23,14 @@
       </nav>
       <nav *ngIf="currentTab == 'Award Notices'">
         <ul class="usa-sidenav-list">
-          <li *ngFor="let element of relatedOpportunities">
+          <!--<li *ngFor="let element of relatedOpportunities">
             <a>
               {{element.data?.award?.date | dateFormat: 'MMM DD, YYYY'}}<br>
               {{element.data?.award?.number}}
             </a>
-          </li>
+          </li>-->
+          <li><a href="{{ currentUrl + '#' + generateID(opportunityFields.AwardSummary) }}">Awards Summary</a></li>
+          <li>&nbsp;</li>
         </ul>
       </nav>
     </div>
@@ -482,6 +484,8 @@
 
       <samTab *ngIf="relatedOpportunities" tabTitle="Award Notices" (tabSelected)="tabSelected($event)">
 
+        <section [attr.id]="generateID(opportunityFields.AwardSummary)" *ngIf="shouldBeDisplayed(opportunityFields.AwardSummary)">
+
         <h2 id="opportunity-award-summary">Awards Summary</h2>
 
 
@@ -539,7 +543,7 @@
                     </li>
                     <li>
                       <span>Contractor Awarded Address: </span>
-                      <span>
+                      <span style="display: block;">
                         <ng-container *ngIf=" element.data?.award?.awardee?.location?.streetAddress ||
                                               element.data?.award?.awardee?.location?.city ||
                                               element.data?.award?.awardee?.location?.state ||
@@ -570,21 +574,26 @@
                     <li><span>Contract Award Dollar Amount: </span> <span>{{element.data?.award?.amount}}</span></li>
                     <li><span>Contract Award Number: </span> <span>{{element.data?.award?.number}}</span></li>
                     <li><span>Contract Award Date: </span> <span>{{element.data?.award?.date | dateFormat: 'MMM DD, YYYY'}}</span></li>
-                    <li><span>Contract Line Item Number: </span>
+                    <!--<li><span>Contract Line Item Number: </span>
                       <span>
                         {{element.data?.award?.lineItemNumber}}
                         <ng-container *ngIf="!element.data?.award?.lineItemNumber">
                           &mdash;
                         </ng-container>
                       </span>
-                    </li>
+                    </li>-->
                   </ul>
                 </div>
               </div>
             </div>
 
         </div>
+
+        </section>
+
         <samPagination *ngIf="totalPages" (pageChange)="pageChange($event-1)" [currentPage]="pageNum+1" [totalPages]="totalPages"></samPagination>
+        
+        
       </samTab>
     </samTabs>
     <br><br>
