--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -7,7 +7,7 @@
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
       <ng-container *ngIf="errorOrganization || !logoUrl">
-        Logo Not Available
+        <img src="src/assets/img/logo-not-available.png" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="logoUrl && !errorOrganization">
         <img class="logo" [src]="logoUrl" alt="HTML5 Icon">
