--- a/src/app/Help/help.template.html
+++ b/src/app/Help/help.template.html
@@ -22,7 +22,7 @@
     <div sam-sticky limit=1200 container="help-content">
       <ul class="usa-sidenav-list">
         <li><a [ngClass]="getSectionClass('overview')" (click)="changeSection('overview')" [routerLink]="['/help/overview']">Help Center Home</a></li>
-        <li><a [ngClass]="getSectionClass('transition')" (click)="changeSection('transition')" [routerLink]="['/help/transition']">Transition to SAM.gov</a></li>
+        <li><a [ngClass]="getSectionClass('transition')" (click)="changeSection('transition')" [routerLink]="['/help/transition']">Modernization Roadmap</a></li>
         <li>
           <a [ngClass]="getSectionClass('about')" (click)="changeSection('about')" [routerLink]="['/help/about']">About SAM.gov</a>
           <ul class="usa-sidenav-sub_list"  *ngIf="isCurrentSection('about')">
