--- a/src/app/Help/image-library/image-library.template.html
+++ b/src/app/Help/image-library/image-library.template.html
@@ -1,4 +1,4 @@
-<div class="usa-grid image-library">
+<div class="image-library">
   <div class="usa-width-one-whole relative" [ngClass]="getImageContainerClass()">
     <div class="usa-width-one-whole">
       <div class="usa-width-one-third" *ngFor="let item of data; let i= index">
@@ -27,7 +27,33 @@
         <a class="image-library-close" (click)="closeReferenceDetail()">Close</a>
         <div class="usa-width-one-whole m_T-4x">
           <h3 class="p_L-2x" *ngIf="showDetailTitle">{{detailObj.item.title}}</h3>
-          <p class="p_L-5x p_R-2x p_B-1x detail-text">{{detailObj.item.detail}}</p>
+          <p class="p_L-5x p_R-2x p_B-1x detail-text" *ngIf="!isReleaseDetail">{{detailObj.item.detail}}</p>
+          <table class="usa-grid-full p_L-5x p_R-2x m_B-3x detail-text" *ngIf="isReleaseDetail" style="table-layout: fixed;">
+            <tr >
+              <td class="m_R-0 release-note-div vertical-line" valign="top">
+                <h4 class="p_L-1x">What we have achieved:</h4>
+                <p class="m_T-0 p_L-1x">
+                  <span class="release-note underline"><strong>Release {{detailObj.item.releaseDetail.preRelease.releaseNum}} - {{detailObj.item.releaseDetail.preRelease.releaseDate}}</strong><br></span>
+                  <span class="release-note" *ngFor="let feature of detailObj.item.releaseDetail.preRelease.releaseDetail"><strong>{{feature.featureName}} - </strong>{{feature.description}}<br></span>
+                </p>
+              </td>
+              <td class="m_R-0 release-note-div vertical-line" valign="top">
+                <h4 class="p_L-1x">What we're working on:</h4>
+                <p class="m_T-0 p_L-1x">
+                  <span class="release-note underline"><strong>Release {{detailObj.item.releaseDetail.curRelease.releaseNum}} - {{detailObj.item.releaseDetail.curRelease.releaseDate}}</strong><br></span>
+                  <span class="release-note" *ngFor="let feature of detailObj.item.releaseDetail.curRelease.releaseDetail"><strong>{{feature.featureName}} - </strong>{{feature.description}}<br></span>
+                </p>
+              </td>
+              <td class="release-note-div" valign="top">
+                <h4 class="p_L-1x">What's up next:</h4>
+                <p class="m_T-0 p_L-1x">
+                  <span class="release-note underline"><strong>Release {{detailObj.item.releaseDetail.nextRelease.releaseNum}} - {{detailObj.item.releaseDetail.nextRelease.releaseDate}}</strong><br></span>
+                  <span class="release-note" *ngFor="let feature of detailObj.item.releaseDetail.nextRelease.releaseDetail"><strong>{{feature.featureName}} - </strong>{{feature.description}}<br></span>
+
+                </p>
+              </td>
+            </tr>
+          </table>
           <span class="image-library-content-link" [ngClass]="getLinkClass()"><a  href="{{detailObj.item.url}}">{{detailObj.item.link}}</a></span>
         </div>
       </div>
