--- a/src/app/Help/sections/reference-library/reference-library.template.html
+++ b/src/app/Help/sections/reference-library/reference-library.template.html
@@ -7,12 +7,12 @@
   </p>
   <h3 id="featuredReference" class="p_L-3x">Featured References</h3>
   <h4 class="p_L-8x">Federal Assistance</h4>
-  <div class="usa-grid-full m_L-3x">
+  <div class="usa-grid m_L-3x">
     <imageLibrary [name]="'federal'" [data]="data.Federal"></imageLibrary>
   </div>
 
   <h4 class="p_L-8x">Contracts</h4>
-  <div class="usa-grid-full m_L-3x">
+  <div class="usa-grid m_L-3x">
     <imageLibrary [name]="'contract'" [data]="data.Contract"></imageLibrary>
   </div>
 
