--- a/src/styles/pages/_help-roadmap.scss
+++ b/src/styles/pages/_help-roadmap.scss
@@ -59,4 +59,8 @@
     background-color: $color-primary-darker;
     color: #fff;
   }
+
+  .underline{
+    border-bottom: 1px solid black ;
+  }
 }
