- KBA component new branch source

--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -1,3 +1,5 @@
+@import 'authentication/shared/kba';
+@import 'authentication/shared/password';
 @import 'authentication/login';
 
 .usa-authentication {
