Fix help page bookmark

--- a/src/app/Help/sections/accounts/accounts.template.html
+++ b/src/app/Help/sections/accounts/accounts.template.html
@@ -1,7 +1,7 @@
 <div class="accounts">
   <section>
-    <h2 class="m_T-2x text-center">User Accounts</h2>
-    <div>
+    <h2 class="m_T-2x">User Accounts</h2>
+    <div class="usa-grid-full">
       <table class="signup-vs-box clearfix">
         <tr>
           <td colspan="2">
