--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -14,24 +14,21 @@
 @import '~uswds/src/stylesheets/uswds';
 
 @import 'components/accordion';
+@import 'components/alert';
 @import 'components/authentication';
 @import 'components/footer';
 @import 'components/pagination';
 @import 'components/header';
 @import 'components/agency-picker';
 @import 'components/multiselect';
-@import 'components/alert-header';
 @import 'components/banner';
 @import 'components/searchbar';
 @import 'components/header-links';
 @import 'components/search-header';
 @import 'components/multiselect-dropdown';
-@import 'components/alert-item';
 @import 'components/image-library';
-@import 'components/alert-footer';
 @import 'components/tabs';
 @import 'components/modal';
-
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
