--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -1,4 +1,8 @@
+@import 'authentication/shared/kba';
+@import 'authentication/shared/password';
+
 @import 'authentication/login';
+@import 'authentication/register';
 
 .usa-authentication {
   margin-top: 80px;
