--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -4,7 +4,7 @@
       <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
     </div>
     <div class="pull-right">
-      <button class="usa-button-transparent" (click)="onEditClick()"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
+      <button class="usa-button-transparent" (click)="onEditClick()" [ngClass]="editDisabled && 'usa-button-transparent-disabled'"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
     </div>
   </div>
   <div class="alert-item usa-grid-full">
@@ -26,6 +26,3 @@
     </div>
   </div>
 </div>
-<!--<alert-edit *ngIf="isEditing" [alert]="alert" [mode]="'edit'" (publish)="onEditAlertPublish($event)"-->
-            <!--(draft)="onEditAlertDraft($event)" (cancel)="onEditAlertCancel()">-->
-<!--</alert-edit>-->
