--- a/src/app/alerts/alerts.template.html
+++ b/src/app/alerts/alerts.template.html
@@ -4,16 +4,16 @@
   <h1 class="alert-page-title">System Alerts</h1>
   <div class="alerts-toolbar">
     <div class="toolbar-item">
-      <samMultiSelectDropdown [(model)]="filters.statuses" [label]="statuses.label" [options]="statuses.options" [name]="'statuses'" (modelChange)="onParamChanged()"></samMultiSelectDropdown>
+      <samMultiSelectDropdown [disabled]='alertBeingEdited' [(model)]="filters.statuses" [label]="statuses.label" [options]="statuses.options" [name]="'statuses'" (modelChange)="onParamChanged()"></samMultiSelectDropdown>
     </div>
     <div class="toolbar-item">
-      <samMultiSelectDropdown [(model)]="filters.types" [label]="types.label" [options]="types.options" [name]="'types'" (modelChange)="onParamChanged()"></samMultiSelectDropdown>
+      <samMultiSelectDropdown [disabled]='alertBeingEdited' [(model)]="filters.types" [label]="types.label" [options]="types.options" [name]="'types'" (modelChange)="onParamChanged()"></samMultiSelectDropdown>
     </div>
     <div class="toolbar-item">
-      <samSelect class='publish-select' [(model)]="filters.datePublished" [options]="datesPublished" [name]="'datesPublished'" (modelChange)="onParamChanged()"></samSelect>
+      <samSelect [disabled]='alertBeingEdited' class='publish-select' [(model)]="filters.datePublished" [options]="datesPublished" [name]="'datesPublished'" (modelChange)="onParamChanged()"></samSelect>
     </div>
     <div class="toolbar-item sort-column">
-      <samSelect class="sort-select" [(model)]="sortField" [options]="sortFields" [name]='sortField' (modelChange)="onParamChanged()" [label]="'Sort by:'"></samSelect>
+      <samSelect [disabled]="alertBeingEdited" class="sort-select" [(model)]="sortField" [options]="sortFields" [name]='sortField' (modelChange)="onParamChanged()" [label]="'Sort by:'"></samSelect>
     </div>
   </div>
   <div class="pull-right" *ngIf="!alertBeingEdited">
@@ -34,7 +34,7 @@
   </div>
   <div *ngFor="let alert of alerts" class="alert-block">
     <alert-edit *ngIf="alertBeingEdited && alertBeingEdited === alert" [mode]="'edit'" (cancel)="onAlertCancel()" (accept)="onEditAlertAccept($event)" [alert]="alertBeingEdited"></alert-edit>
-    <alert-item [alert]="alert" *ngIf="alertBeingEdited !== alert" (edit)="onAlertEdit($event)"></alert-item>
+    <alert-item [alert]="alert" *ngIf="alertBeingEdited !== alert" (edit)="onAlertEdit($event)" [editDisabled]="alertBeingEdited"></alert-item>
   </div>
   <samPagination *ngIf='totalPages() > 1' [(currentPage)]="currentPage" [totalPages]="totalPages()" (pageChange)="onParamChanged($event)"></samPagination>
 </div>
