--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -7,7 +7,7 @@
     <div sam-sticky limit=1200 container="occupy-page">
       <!--Logo-->
       <ng-container *ngIf="errorOrganization || !logoUrl">
-        <img src="src/assets/img/logo-not-available.png" alt="Logo Not Available">
+        <img src="src/assets/img/logo-not-available.png" class = "logo" alt="Logo Not Available">
       </ng-container>
       <ng-container *ngIf="logoUrl && !errorOrganization">
         <img class="logo" [src]="logoUrl" alt="HTML5 Icon">
@@ -333,7 +333,7 @@
                       </span>
 
                       <span class="download-info-link">
-                        
+
                         <a *ngIf="resource.type === 'link'" href="{{resource.uri}}">
                           {{resource.description}}
                           <sup *ngIf="resource.size && resource.size != 0">
@@ -346,9 +346,9 @@
                             {{resource.size | filesize}}
                           </sup>
                         </a>
-                        
+
                       </span>
-                      
+
                       <span class="download-info-type">
                         {{resource.typeInfo.name}}
                       </span>
