--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -2,12 +2,10 @@
   <div class="usa-width-one-whole">
     <ng-container *ngIf="errorOrganization">Organization ID: {{organization.orgKey}} NOTE: Complete Federal Hierarchy information is currently unavailable.</ng-container>
     <div class="clearfix">
-      <ng-container *ngIf="errorLogo || !logoUrl">
-        <img src="src/assets/img/logo-not-available.png" class="logo" alt="Logo Not Available">
-      </ng-container>
-      <div class="logo-section" *ngIf="logoUrl && !errorLogo">
+      <div class="logo-section">
         <!-- Logo -->
-        <img class="logo" [src]="logoUrl" alt="HTML5 Icon">
+        <img *ngIf="logoUrl && !errorLogo" class="logo" [src]="logoUrl" alt="HTML5 Icon">
+        <img *ngIf="errorLogo || !logoUrl" src="src/assets/img/logo-not-available.png" class="logo" alt="Logo Not Available">
       </div>
       <div class="intro-section" *ngIf="organization" >
         <h1>{{organization.agencyName || organization.name || organization.orgKey}}</h1>
