- Initial design implementation with mock data

--- a/src/app/authentication/profile/profile.component.html
+++ b/src/app/authentication/profile/profile.component.html
@@ -13,7 +13,7 @@
       </li>
     </ul>
   </aside>
-  <section class="usa-width-three-fourths usa-profile">
+  <section class="usa-width-three-fourths usa-profile" [ngClass]="[activeRouteClass]">
      <router-outlet></router-outlet>
   </section>
 </div>
