--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -1,5 +1,6 @@
 @import 'authentication/shared/password';
 @import 'authentication/login';
+@import 'authentication/profile';
 
 .usa-authentication {
   margin-top: 80px;
