--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -23,6 +23,9 @@
       <div class="alert-right-item">
         End Date: {{alert.endDate() | dateFormat: 'MMM DD, YYYY'}}
       </div>
+      <div class="alert-right-item">
+        Status: {{alert.status()}}
+      </div>
     </div>
   </div>
 </div>
