--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -18,10 +18,10 @@
     </div>
     <div class="usa-width-one-fourth">
       <div class="alert-right-item">
-        Published Date: {{alert.publishedDate() | dateFormat: 'MMM DD, YYYY'}}
+        Published Date: {{publishedDate()}}
       </div>
       <div class="alert-right-item">
-        End Date: {{alert.endDate() | dateFormat: 'MMM DD, YYYY'}}
+        End Date: {{endDate()}}
       </div>
       <div class="alert-right-item">
         Status: {{alert.status()}}
