--- a/src/ui-kit/header-links/header-links.component.html
+++ b/src/ui-kit/header-links/header-links.component.html
@@ -28,7 +28,7 @@
   </span>
   <span *ngIf="states.isSignedIn">
     <div class=" m_R-3x align-top m_B-0x">
-      <span class="white-text header-link">{{ user.cn }}</span>
+      <a class="white-text header-link" routerLink="/profile">{{ user.cn }}</a>
     </div>
   </span>
 </div>
