--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -1,10 +1,10 @@
 <h2>Personal Details</h2>
 <div>
-  <form [formGroup]="detailsForm">
+  <form *ngIf="detailsForm" [formGroup]="detailsForm">
     <!--============================-->
     <!--=== Identity Information ===-->
     <!--============================-->
-    <section [ngClass]="{ 'usa-editable': isEdit('identity') }">
+    <section class="identity" [ngClass]="{ 'usa-editable': isEdit('identity') }">
       <h3>Identifying Information<a class="usa-edit" href="javascript:void(0);" (click)="edit('identity')">Edit</a></h3>
       <div class="usa-form-group">
         <label>Name:</label>
@@ -26,25 +26,26 @@
     <!--============================-->
     <!--=== Business Information ===-->
     <!--============================-->
-    <section [ngClass]="{ 'usa-editable': isEdit('business') }">
+    <section class="business" [ngClass]="{ 'usa-editable': isEdit('business') }">
       <h3>Business Information<a class="usa-edit" href="javascript:void(0);" (click)="edit('business')">Edit</a></h3>
 
       <div class="usa-form-group" *ngIf="states.isGov">
-        <label>Office:</label>
-        <div class="usa-form-control" [innerText]="phone"></div>
+        <label>Department:</label>
+        <div class="usa-form-control" [innerText]="department"></div>
       </div>
       <div class="usa-form-group" *ngIf="states.isGov">
         <label>Agency:</label>
-        <div class="usa-form-control" [innerText]="phone"></div>
+        <div class="usa-form-control" [innerText]="agency"></div>
+      </div>
+      <div class="usa-form-group" *ngIf="states.isGov">
+        <label>Office:</label>
+        <div class="usa-form-control" [innerText]="office"></div>
       </div>
       <div class="usa-form-group" *ngIf="states.isGov">
         <label>Activity Access Code:</label>
-        <div class="usa-form-control" [innerText]="phone"></div>
+        <div class="usa-form-control" [innerText]="aac"></div>
       </div>
-      <div class="usa-form-group" *ngIf="states.isGov">
-        <label>Department:</label>
-        <div class="usa-form-control" [innerText]="phone"></div>
-      </div>
+
       <div class="usa-form-group">
         <label>Business Phone:</label>
         <div class="usa-form-control" [innerText]="phone"></div>
@@ -67,12 +68,21 @@
     <!--==========================-->
     <!--=== Security Questions ===-->
     <!--==========================-->
-    <section [ngClass]="{ 'usa-editable': isEdit('kba') }">
+    <section class="kba" [ngClass]="{ 'usa-editable': isEdit('kba') }">
       <h3>Security Questions<a class="usa-edit" href="javascript:void(0);" (click)="edit('kba')">Edit</a></h3>
 
       <div *ngFor="let kbaAnswer of user.kbaAnswerList; let $index = index;" class="usa-form-group kba">
         <label [innerText]="lookups.questions[kbaAnswer.questionId].question"></label>
-        <div class="usa-form-control" [innerHtml]="kbaAnswer.answer">
+        <div class="usa-form-control" [innerHtml]="kbaAnswer.answer"></div>
+      </div>
+
+      <div class="usa-form-editable" *ngIf="questions.length">
+        <div *ngFor="let kbaAnswer of detailsForm.controls.kbaAnswerList.controls; let $index = index;">
+          <sam-kba-entry [(questions)]="questions[$index]"
+                         [question]="detailsForm.controls.kbaAnswerList.controls[$index].controls.questionId"
+                         [(answer)]="detailsForm.controls.kbaAnswerList.controls[$index].controls.answer"
+                         (onQuestionChange)="changeQuestion($event, $index)"
+                         label="Question {{ $index + 1 }}"></sam-kba-entry>
         </div>
       </div>
 
@@ -84,9 +94,27 @@
         Once you delete your account, you will not be able to recover any of your account information or permissions.<br />
         All your My Access information will permanently be deleted.
       </div>
-      <samButton buttonType="secondary" buttonText="Deactivate Account"></samButton>
+      <samButton buttonType="secondary" buttonText="Deactivate Account" (click)="confirmDeactivation()"></samButton>
     </section>
   </form>
 </div>
 
 <samAlert type="info" title="Information Status" description="If you have legacy accounts of the 10 systems, you can migrate your privileges"></samAlert>
+
+<samModal #confirmModal
+          type="warning"
+          title="Are you sure you want to deactivate your account?"
+          description="If you deactivate your account it cannot be reactivated for future use and you will be immediately logged out of the system. Are you sure you want to deactivate your account?"
+          showClose="true"
+          submitButtonLabel="Yes, deactivate my account"
+          cancelButtonLabel="No, cancel account deactivation"
+          (onSubmit)="reconfirmDeactivation()"></samModal>
+
+<samModal #reconfirmModal
+          type="warning"
+          title="Warning"
+          description="Proceeding with this edit will result in the loss of privileged access to IAE applications. You will have to re-request access in order to restore your roles. Please press yes to continue editing or cancel the edit below."
+          showClose="true"
+          submitButtonLabel="Yes, continue with edit"
+          cancelButtonLabel="No, cancel my edit"
+          (onSubmit)="deactivate()"></samModal>
