--- a/src/styles/components/authentication/shared/_kba.scss
+++ b/src/styles/components/authentication/shared/_kba.scss
@@ -47,13 +47,22 @@
     }
   }
 
+  .question {
+    float: left;
+    margin-top: 0rem;
+  }
+
   .answer {
     width: 38%;
+
+    label {
+      margin-top: 2rem;
+    }
 
     input {
       // Oddly, 18F's styles are catered to inline forms. Weird alignment thing.
       position: relative;
-      top: -3px;
+      top: 2.5px;
     }
 
     .usa-input-error {
