Add in target attributes for external links

--- a/src/app/Help/image-library/image-library.template.html
+++ b/src/app/Help/image-library/image-library.template.html
@@ -54,7 +54,7 @@
               </td>
             </tr>
           </table>
-          <span class="image-library-content-link" [ngClass]="getLinkClass()"><a  href="{{detailObj.item.url}}">{{detailObj.item.link}}</a></span>
+          <span class="image-library-content-link" [ngClass]="getLinkClass()"><a href="{{detailObj.item.url}}" target="{{detailObj.item.title}}">{{detailObj.item.link}}</a></span>
         </div>
       </div>
     </div>
