- IAM API `CheckSession` shortcut - Redirect from sign-in if already authenticated

--- a/src/ui-kit/header-links/header-links.component.html
+++ b/src/ui-kit/header-links/header-links.component.html
@@ -28,7 +28,7 @@
   </span>
   <span *ngIf="states.isSignedIn">
     <div class=" m_R-3x align-top m_B-0x">
-      <a class="white-text header-link" routerLink="/profile">{{ user.cn }}</a>
+      <a class="white-text header-link" routerLink="/profile">{{ user.fullName }}</a>
     </div>
   </span>
 </div>
