--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -522,7 +522,10 @@
           </div>
 
         </div>
-
+            <p class="m_T-2x" style="text-align: right;">
+              <strong>{{min +1}} - {{(relatedOpportunitiesMetadata.count < max) ? relatedOpportunitiesMetadata.count : max}}</strong>
+              of <strong>{{relatedOpportunitiesMetadata.count}}</strong>
+            </p>
           <div class="card-simple" *ngFor="let element of relatedOpportunities">
 
             <h3>{{element.data?.award?.awardee?.name}}</h3>
@@ -590,8 +593,8 @@
         </section>
 
         <samPagination *ngIf="totalPages" (pageChange)="pageChange($event-1)" [currentPage]="pageNum+1" [totalPages]="totalPages"></samPagination>
-        
-        
+
+
       </samTab>
     </samTabs>
     <br><br>
