--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -1,4 +1,9 @@
 samPagination {
+  .disabled {
+    opacity: .6;
+    pointer-events: none;
+  }
+
   .usa-pagination li {
     display: inline-block;
     vertical-align: middle;
