--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -35,6 +35,7 @@
 @import 'components/alert-footer';
 @import 'components/tabs';
 @import 'components/modal';
+@import 'components/alphabet-selector';
 
 
 @import 'pages/assistance-listing';
