--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -4,7 +4,7 @@
       <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
     </div>
     <div class="pull-right">
-      <button class="usa-button-transparent" (click)="onEditClick()" [ngClass]="editDisabled && 'usa-button-transparent-disabled'"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
+      <button *ngIf="isAdmin" class="usa-button-transparent" (click)="onEditClick()" [ngClass]="editDisabled && 'usa-button-transparent-disabled'"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
     </div>
   </div>
   <div class="alert-item usa-grid-full">
